sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:13: error: missing argument list for method getValeur in class SortingEntity
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `getValeur _` or `getValeur(_)` instead of `getValeur`.
      getValeur(j+1)=v
      ^