sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var i:Int=0
  var v:Int=0
  var j:Int=0
  
  for(i<-1 to getNombreValeurs()-1){
    v=getValeur(i)
    j=i-1
  	while (j> -1 && getValeur(j)> v){	
      echange(j+1,j)
      j-=1
      getValeur(j+1)=v
    } 
  
	}
  
}

